--- a/src/Product_Click/product_click.css
+++ b/src/Product_Click/product_click.css
@@ -7,19 +7,37 @@
 
 
 .product_click{
-    height: 470px;
+    min-height: 470px;
     width: 100vw;
     background: #0D1625;
     padding: 20px;
-    border: 5px solid red;
 }
 
 .product_click .image{
     height: 300px;
-    width: 100%;
+    width: 300px;
     background: #000000;
-    border: 4px solid blue;
+    border: 2px solid #83089A;
+    border-radius: 10px;
+    box-shadow: 0 0 4px 4px #231152;
+    margin: 0 auto 30px;
     position: relative;
+    
+}
+
+.product_click .image button{
+    height: 40px;
+    width: 40%;
+    background: linear-gradient(to right, #048404, #6EF86E);
+    color: white;
+    font-weight: 900;
+    letter-spacing: 1px;
+    border-bottom-left-radius: 15px;
+    border: none;
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 2;
 }
 
 .product_click .image img{
@@ -38,11 +56,10 @@
 .product_click .title{
     width: 100%;
     height: 70px;
-    border: 3px solid cyan;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    
+    margin-bottom: 20px;
 }
 
 .product_click .title h2{
@@ -55,7 +72,6 @@
     font-weight: 500;
     font-size: 24px;
     display: flex;
-    border: 3px solid pink;
 }
 
 .product_click .price p:nth-child(1){
@@ -66,4 +82,100 @@
 .product_click .price p:nth-child(2){
     color: #807F7E;
     text-decoration: line-through;
+}
+
+.product_click .buy_btn{
+    height: 60px;
+    width: 400px;
+    margin-top: 20px;
+    display: none;
+}
+
+.product_click .buy_btn button{
+    height: 60%;
+    width: 40%;
+    border: none;
+    border-radius: 30px;
+    color: white;
+    font-weight: 900;
+    letter-spacing: 1px;
+    cursor: pointer;
+}
+
+.product_click .buy_btn button:nth-child(1){
+    background: linear-gradient(to right, #35C0D7, #1584CF);
+    margin-right: 10px;
+}
+
+.product_click .buy_btn button:nth-child(1):hover{
+    background: transparent;
+    border: 2px solid #35C0D7;
+    box-shadow: 0 0 4px 4px #35C0D7;
+}
+
+.product_click .buy_btn button:nth-child(2){
+    background: linear-gradient(to right, #A818C1, #4E41EB);
+}
+
+.product_click .buy_btn button:nth-child(2):hover{
+    background: transparent;
+    border: 2px solid #83089A;
+     box-shadow: 0 0 4px 4px #231152;
+}
+
+.product_click .both .category{
+    height: 50px;
+    width: 150px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-end;
+    display: none;
+}
+
+.product_click .both .category button{
+    height: 70%;
+    width: 70%;
+    background: linear-gradient(to right, #048404, #6EF86E);
+    color: white;
+    font-weight: 900;
+    letter-spacing: 1px;
+    border-radius: 30px;
+    border: none;
+}
+
+@media screen and (min-width: 768px){
+    
+  .product_click{
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      padding-left: 50px;
+  } 
+  
+  .product_click .image{
+      width: 300px;
+      margin-left: 0;
+      margin-right: 15px;
+  }
+  
+  .product_click .buy_btn{
+      display: block;
+  }
+
+  .product_click .both .category{
+      display: block; 
+  }
+
+  .product_click .image button{
+      display: none;  
+  }
+  
+    
+}
+
+
+@media screen and (min-width: 900px){
+    .product_click{
+    padding-left: 150px;
+    }    
 }
